fluxcd/apps/overlays/production/zz-graveyard/orangehrm/service-orangehrm-ingress-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: orangehrm
  labels:
    policy.prplanit.com/ingress: "true"
