fluxcd/apps/overlays/production/zz-graveyard/orangehrm/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: orangehrm
  namespace: hyrule-castle
  annotations:
    gatus.home-operations.com/endpoint: |
      group: "Business Apps (Hyrule Castle🏰)"
spec:
  parentRefs:
    - name: cell-membrane-gateway
      namespace: hyrule-castle
      sectionName: https-prplanit
  hostnames:
    - "orangehrm.prplanit.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: orangehrm
          port: 8442
